--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   },
   "dependencies": {
     "@mdi/font": "^7.4.47",
+    "pinia": "^3.0.3",
     "vue": "^3.5.21",
+    "vue-router": "^4.5.1",
     "vuetify": "^3.10.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "autoprefixer": "^10.4.21",
     "typescript": "~5.8.3",
     "vite": "^7.1.6",
     "vue-tsc": "^3.0.7"
